--- a/Source/app/src/main/res/layout/movie_layout.xml
+++ b/Source/app/src/main/res/layout/movie_layout.xml
@@ -3,17 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
+
     >
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
 
         <LinearLayout
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -41,6 +44,8 @@
         </LinearLayout>
 
         <LinearLayout
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -74,8 +79,9 @@
                         android:id="@+id/durationView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:maxWidth="100dp"
                         android:textColor="#FFFFFF"
-                        android:text="2h30m"
+                        android:text="5 seasons"
                         android:textSize="15sp"/>
 
                 </LinearLayout>
@@ -84,25 +90,28 @@
                     android:id="@+id/imdbView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#FFFFFF"
-                    android:text="IMDB:8.1/10"
+                    android:textColor="#F6C800"
+                    android:text="IMDB: 8.1/10"
+
                     android:textSize="15sp"
                     android:layout_marginVertical="5dp"/>
 
                 <TextView
                     android:id="@+id/movieGenreView"
-                    android:layout_width="200dp"
+                    android:layout_width="wrap_content"
+                    android:maxWidth="200dp"
                     android:layout_height="wrap_content"
                     android:text="Crime, Drama"
                     android:textColor="#FFFFFF"
-                    android:textSize="13sp"
+                    android:textSize="10sp"
                     android:gravity="center_horizontal"/>
 
             </LinearLayout>
 
             <TextView
                 android:id="@+id/descriptionView"
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
+                android:maxWidth="200dp"
                 android:layout_height="wrap_content"
                 android:text="A young African American man, reeling from the tragic loss of his wife, travels to rural Maine to seek answers..."
                 android:textColor="#FFFFFF"
@@ -124,14 +133,15 @@
 
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/watchButtonView"
         android:layout_width="327dp"
         android:layout_height="80dp"
         android:text="Loading..."
-        android:background="#FFFFFF"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/seen_button_round"
         android:layout_gravity="center_horizontal"
         android:layout_marginVertical="20dp"/>
 
