--- a/Source/app/src/main/res/layout/movie_layout.xml
+++ b/Source/app/src/main/res/layout/movie_layout.xml
@@ -119,6 +119,7 @@
                 android:gravity="start"/>
 
             <Button
+                android:id="@+id/seenBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/seen_button_round"
