--- a/Source/app/src/main/res/layout/activity_main.xml
+++ b/Source/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp">
 
         <LinearLayout
             android:id="@+id/mainLinear"
@@ -95,6 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:entries="@array/spinner_genres"
+                android:background="@null"
                 android:layout_marginLeft="10dp"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -102,7 +104,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginVertical="16dp"
-                android:layout_marginLeft="10dp"
                 >
                 <CheckBox
                     android:id="@+id/movieCB"
@@ -115,7 +116,7 @@
                     android:textColor="#FFFFFF"
                     android:buttonTint="#FFFFFF"
                     android:padding="5dp"
-                    android:gravity="start"
+                    android:gravity="center"
                     />
 
                 <CheckBox
@@ -129,7 +130,7 @@
                     android:textColor="#FFFFFF"
                     android:buttonTint="#FFFFFF"
                     android:padding="5dp"
-                    android:gravity="end"
+                    android:gravity="center"
                     />
 
                 <TextView
@@ -148,6 +149,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:background="@null"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:entries="@array/imdbScore"/>
